<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.smart.browser.little.ui.download.choice.DownloadChoiceViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/alertLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/alert"
                android:textColor="#37ACAA"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:lines="4"
                android:text="@string/watch_video_to_download"
                android:textColor="#000000"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_exit_alert_dialog_cancel"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_confirm"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_exit_alert_dialog_confim"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="#37ACAA"
                    android:textSize="17sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="20dp"
                android:text="@string/title_download_choices" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/choicesRV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="4dp"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/downloadBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:spanCount="2"
                tools:itemCount="2"
                tools:listitem="@layout/download_choice_item" />

            <Button
                android:id="@+id/downloadBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:enabled="@{viewmodel.hasCheckedItems}"
                android:onClick="@{() -> viewmodel.download()}"
                android:text="@string/download"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </FrameLayout>
</layout>