<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/splash_fragment">

    <fragment
        android:id="@+id/splash_fragment"
        android:name="com.smart.browser.little.ui.splash.SplashFragment"
        tools:layout="@layout/splash_fragment">
        <action
            android:id="@+id/to_home"
            app:destination="@+id/navigation_home"
            app:popUpTo="@id/splash_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.smart.browser.little.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_games"
        android:name="com.smart.browser.little.ui.games.GamesFragment"
        android:label="@string/title_games"
        tools:layout="@layout/fragment_games" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.smart.browser.little.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/feed_fragment"
        android:name="com.smart.browser.little.ui.news.fragment.HomeFeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_home_feed" />

    <fragment
        android:id="@+id/web_view_fragment"
        android:name="com.smart.browser.little.ui.web.WebViewFragment"
        android:label="{title}"
        tools:layout="@layout/web_fragment">

        <argument
            android:name="title"
            app:argType="string" />

        <argument
            android:name="url"
            app:argType="string" />
    </fragment>

    <action
        android:id="@+id/to_web_view_fragment"
        app:destination="@+id/web_view_fragment" />

    <fragment
        android:id="@+id/app_view_fragment"
        android:name="com.smart.browser.little.ui.web.AppViewFragment"
        android:label="{title}"
        tools:layout="@layout/web_fragment">

        <argument
            android:name="title"
            app:argType="string" />

        <argument
            android:name="site"
            app:argType="com.art.maker.data.model.Site" />

        <action
            android:id="@+id/to_download_choice_dialog"
            app:destination="@id/download_choice_dialog" />
    </fragment>

    <action
        android:id="@+id/to_app_view_fragment"
        app:destination="@+id/app_view_fragment" />

    <fragment
        android:id="@+id/game_view_fragment"
        android:name="com.smart.browser.little.ui.web.GameViewFragment"
        android:label="{title}"
        tools:layout="@layout/web_fragment">

        <argument
            android:name="title"
            app:argType="string" />

        <argument
            android:name="site"
            app:argType="com.art.maker.data.model.Site" />
    </fragment>

    <action
        android:id="@+id/to_game_view_fragment"
        app:destination="@+id/game_view_fragment" />

    <dialog
        android:id="@+id/search_dialog"
        android:name="com.smart.browser.little.ui.search.SearchDialogFragment"
        tools:layout="@layout/search_fragment" />

    <action
        android:id="@+id/to_search_dialog"
        app:destination="@+id/search_dialog" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.smart.browser.little.ui.categories.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/categories_fragment" />

    <fragment
        android:id="@+id/apps_of_category_fragment"
        android:name="com.smart.browser.little.ui.categories.AppsOfCategoryFragment"
        android:label="{categoryName}"
        tools:layout="@layout/apps_of_category_fragment">

        <argument
            android:name="categoryName"
            app:argType="string" />

        <argument
            android:name="key"
            app:argType="string" />
    </fragment>

    <action
        android:id="@+id/to_apps_of_category"
        app:destination="@+id/apps_of_category_fragment" />

    <fragment
        android:id="@+id/games_of_category_fragment"
        android:name="com.smart.browser.little.ui.games.GamesOfCategoryFragment"
        android:label="{categoryName}"
        tools:layout="@layout/games_of_category_fragment">

        <argument
            android:name="categoryName"
            app:argType="string" />

        <argument
            android:name="key"
            app:argType="string" />
    </fragment>

    <action
        android:id="@+id/to_games_of_category"
        app:destination="@+id/games_of_category_fragment" />

    <dialog
        android:id="@+id/alert_dialog"
        android:name="com.smart.browser.little.ui.dialog.AlertDialogFragment">

        <argument
            android:name="title"
            app:argType="string" />

        <argument
            android:name="message"
            app:argType="string" />

        <argument
            android:name="positive"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="negative"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </dialog>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.smart.browser.little.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <action
        android:id="@+id/to_alert_dialog"
        app:destination="@+id/alert_dialog" />

    <dialog
        android:id="@+id/exit_app_dialog"
        android:name="com.smart.browser.little.ui.exitapp.ExitAppDialog" />

    <action
        android:id="@+id/to_exit_app_dialog"
        app:destination="@+id/exit_app_dialog" />

    <dialog
        android:id="@+id/exit_web_alert_dialog"
        android:name="com.smart.browser.little.ui.dialog.ExitWebAlertDialogFragment"/>

    <action
        android:id="@+id/to_exit_web_alert_dialog"
        app:destination="@+id/exit_web_alert_dialog" />

    <action
        android:id="@+id/to_about"
        app:destination="@+id/navigation_about" />

    <dialog
        android:id="@+id/download_choice_dialog"
        android:name="com.smart.browser.little.ui.download.choice.DownloadChoiceDialogFragment" >

        <argument
            android:name="choices"
            app:argType="com.art.vd.model.Video[]" />
    </dialog>

</navigation>